--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
     <id>org.river.nuls.contract.tool</id>
     <name>Nuls</name>
-    <version>1.1.2-BETA</version>
+    <version>1.1.3-beta2</version>
     <vendor email="support@nuls.io" url="https://nuls.io/">NULS</vendor>
 
     <description><![CDATA[
