update change notes

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -10,7 +10,7 @@
     ]]></description>
 
     <change-notes><![CDATA[
-      V1.1.2-BETA<br>
+      V1.1.3-beta2<br>
       <em>The known bugs fixed. </em><br>
     ]]>
     </change-notes>
