--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
     <id>org.river.nuls.contract.tool</id>
     <name>Nuls</name>
-    <version>1.1.3-beta2</version>
+    <version>1.1.3</version>
     <vendor email="support@nuls.io" url="https://nuls.io/">NULS</vendor>
 
     <description><![CDATA[
@@ -10,7 +10,7 @@
     ]]></description>
 
     <change-notes><![CDATA[
-      V1.1.3-beta2<br>
+      V1.1.3<br>
       <em>The known bugs fixed. </em><br>
     ]]>
     </change-notes>
