--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
     <id>org.river.nuls.contract.tool</id>
     <name>Nuls</name>
-    <version>1.1.4</version>
+    <version>1.1.4.6</version>
     <vendor email="support@nuls.io" url="https://nuls.io/">NULS</vendor>
 
     <description><![CDATA[
@@ -10,8 +10,10 @@
     ]]></description>
 
     <change-notes><![CDATA[
-      V1.1.4<br>
-      <em>The known bugs fixed. </em><br>
+      V1.1.4.6<br>
+      <em>Update sdk in testNet. </em><br>
+      <em>Support verify signature data(ECDSA) in testNet. </em><br>
+      <em>Support random seed from the block chain in testNet. </em><br>
     ]]>
     </change-notes>
 
